# native_idl

./: .gitignore  README.md
.github/workflows/: rust.yml
cmd/: Cargo.toml  idl_exm.idl  idl_types.idl
cmd/src/: analyze.rs  clean.rs  client.rs  diagnostics.rs  formatter.rs  generator.rs  lib.rs  main.rs  message.rs  server.rs
docs/: flutter_service_worker.js  index.html  index.md  main.dart.js  pubspec.yaml
docs/android/app/: build.gradle
docs/assets/: AssetManifest.json  FontManifest.json  NOTICES
docs/ios/Runner.xcodeproj/: project.pbxproj
docs/linux/: CMakeLists.txt  my_application.cc
docs_web/: .gitignore  build_page.fish  pubspec.yaml
docs_web/integration_test/: app_test.dart
docs_web/lib/: main.dart  overview.dart  tree.dart  tree_i.dart
ide/: README.md
ide/idl_ls/: Cargo.toml
ide/idl_ls/src/: cli.rs  lib.rs
ide/idl_ls/src/core/: completion.rs  formatting.rs  mod.rs  session.rs  symbol.rs
ide/idl_ls/src/lsp/: api.rs  capabilities.rs  completion.rs  formatting.rs  mod.rs  server.rs  session.rs  symbol.rs
ide/nativeidl_vs/: CHANGELOG.md  language-configuration.json  package.json
ide/nativeidl_vs/client/: package-lock.json  package.json
ide/nativeidl_vs/client/src/: client.ts  extension.ts
ide/nativeidl_vs/syntaxes/: idl.tmLanguage.json  ids.tmLanguage.json
idl/: Cargo.toml  idl_module.idlo  idl_types.idl  idlspec.toml
idl/src/: analyzer.rs  completion.rs  formatting.rs  idl_nodes.rs  idl_types.rs  lib.rs  mod_package.rs  module.rs  parser.rs  parser_ref.rs  range.rs  reserved.rs  scanner.rs  spec.rs
idl/src/formatting/: idl.rs  ids.rs  mod.rs
idl/src/idl/: analyzer.rs  idl_types.rs  mod.rs
idl/src/ids/: analyzer.rs  client.rs  ids_nodes.rs  layer.rs  library.rs  mod.rs  package.rs  parser.rs  server.rs
idl/src/spec/: mod.rs  parser.rs
idl/tests/: idl.rs  ids.rs  module.rs
idl_cmd/: Cargo.toml
idl_cmd/src/: analyze.rs  client.rs  lib.rs  message.rs  server.rs
idl_derive/: Cargo.toml
idl_gen/: Cargo.toml  idl_test.idl  idl_types.idl
idl_gen/idl/: idl_test.idl
idl_gen/src/: cargo_m.rs  con_idl.rs  lang.rs  lib.rs  rust_impl.rs  rust_types.rs
idl_gen/src/layers/ffi/: ffi_types.rs  mod.rs  server.rs
idl_gen/src/rust/: README.md  con_idl.rs  mod.rs  rust_impl.rs  rust_types.rs  string_pros.rs
idl_gen/src/rust/layers/: mod.rs
idl_gen/src/rust/layers/bytes/: mod.rs  types.rs
idl_gen/src/rust/layers/bytes/server/: mod.rs  package.rs
idl_gen/src/rust/layers/ffi/: ffi_types.rs  idl_internal.rs  mod.rs  server.rs  server_cargo.rs
idl_gen/src/rust/layers/ffi/client/: client_cargo.rs  client_types.rs  layer.rs  mod.rs
idl_gen/src/rust/layers/ffi/server/: compile.rs  ffi_cargo.rs  ffi_impl.rs  ffi_types.rs  layer.rs  mod.rs  server_cargo.rs  server_impl.rs  server_types.rs
idl_gen/src/rust/layers/web_socket/server/: layer.rs  mod.rs
idl_gen/src/rust/layers/ws/: mod.rs
idl_gen/src/rust/layers/ws/client/: layer.rs  mod.rs  ws_mod.rs
idl_gen/src/rust/layers/ws/server/: layer.rs  mod.rs  ws_mod.rs  ws_types.rs
idl_gen/test/all/: idl_test.idl
idl_gen/test/basic_types/: basic_types.idl  basic_types.ids
idl_gen/test/basic_types/rust/basic_types/: basic_types
idl_gen/test/basic_types/rust/basic_types/idl_types/src/: idl_impl.rs  lib.rs
idl_gen/test/basic_types/rust/basic_types/src/: lib.rs
idl_gen/test/idl/: idl_test.idl  idl_test.ids
idl_gen/test/idl_test/: .flutter-plugins  .flutter-plugins-dependencies  .packages  Cargo.toml  pubspec.yaml
idl_gen/test/idl_test/.dart_tool/: package_config.json  package_config_subset
idl_gen/test/idl_test/lib/: idl_test.dart
idl_gen/test/idl_test/lib/src/: idl_ffi.dart  idl_interface_constructor.dart  idl_types.dart  idl_types_interface.dart
idl_gen/test/idl_test/linux/: CMakeLists.txt  idl_test_plugin.cc
idl_gen/test/idl_test/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
idl_gen/test/idl_test/linux/flutter/ephemeral/.plugin_symlinks/: idl_test
idl_gen/test/idl_test/linux/include/idl_test/: idl_test_plugin.h
idl_gen/test/idl_test/src/: ffi.rs  ffi_types.rs  lib.rs
idl_gen/test/rust/idl_test/idl_types/src/: idl_impl.rs  lib.rs
idl_gen/test/rust/test/: Cargo.toml
idl_internal/: Cargo.toml
idl_internal/src/: lib.rs
idl_internal/src/ffi/: ffi_types.rs
languages/dart/idl_dart/: LICENSE  README.md  pubspec.yaml
languages/dart/idl_dart/lib/: native_idl.dart
languages/dart/idl_dart/lib/src/: dart_client.dart  dart_layer.dart  dart_spec.dart  dart_types.dart  module.dart  string_pos.dart
languages/dart/idl_dart/lib/src/json/: idl_json.dart  idl_json.g.dart  idl_types_json.dart  idl_types_json.g.dart  ids_types_json.dart  ids_types_json.g.dart
languages/dart/idl_dart/lib/src/pubspec/: dependency.dart  pubspec.dart  yaml_string.dart
languages/dart/idl_dart/test/: main.dart
languages/dart/idl_internal/: CHANGELOG.md  README.md  pubspec.yaml
languages/dart/idl_internal/lib/: idl_internal.dart
languages/dart/idl_internal/lib/src/: dart_idl.dart  ffi_internal.dart
languages/idl_gen/: Cargo.toml
languages/idl_gen/src/: README.md  binary_json.rs  cargo_m.rs  lang.rs  lib.rs
languages/idl_gen/src/rust/: README.md  con_idl.rs  mod.rs  rust_server.rs  rust_types.rs  string_pros.rs
languages/idl_gen/src/rust/layers/: mod.rs
languages/idl_gen/src/rust/layers/bytes/: mod.rs  types.rs
languages/idl_gen/src/rust/layers/ffi/: mod.rs
languages/idl_gen/test/all/: idl_test.ids  idl_types.idl
languages/idl_gen/test/basic_types/: basic_types.idl  basic_types.ids  stream_types.idl
languages/idl_gen/test/basic_types/rust/basic_types/: Cargo.toml  basic_types
languages/idl_gen/test/basic_types/rust/basic_types/idl_types/: Cargo.toml
languages/idl_gen/test/basic_types/rust/basic_types/idl_types/src/: idl_impl.rs  lib.rs
languages/rust/idl_internal/: Cargo.toml
languages/rust/idl_internal/src/: abi.rs  lib.rs
languages/rust/idl_internal/src/ffi/: ffi_types.rs  mod.rs
spec/: def.md  idl.aux  idl.fdb_latexmk  idl.fls  idl.idx  idl.ilg  idl.ind  idl.out  idl.tex  idl.toc
(+26 files in other folders)
