[package]   
name = "cmd"
version = "0.1.0"
authors = ["Adriano Souza <adriano.souza113@gmail.com>"]
edition = "2018"

[[bin]]
name = "native_idl"
path = "src/bin/main.rs"

[dependencies]
idl = { path = "../idl" }
idl_gen = { path = "../idl_gen" }
anyhow = "1.0"
clap = "3.0.0-beta.2"
codespan-reporting = "0.9"