[package]
name = "idl_gen"
version = "0.1.0"
authors = ["Adriano Souza"]
edition = "2018"

[dependencies]
idl = { path = "../idl" }
regex = "1.3.9"
quote = "1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = { version = "1", default-features = false }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
toml = "0.5"
tempfile = "3"
cargo = { git = "https://github.com/rust-lang/cargo" }