[package]
name = "idl_internal"
version = "0.1.0"
authors = ["Adriano Souza"]
edition = "2018"
description = "Library used only by code being generated in idl."
license-file = "LICENSE"
keywords = ["development-tools::ffi"]
readme = "README.md"
homepage = "https://adrianos42.github.io/native_idl/"
documentation = ""
repository = "https://github.com/adrianos42/native_idl"

[dependencies]
regex = "1.3.9"
lazy_static = "1.4.0"
proc-macro2 = { version = "1", default-features = false }
anyhow = "1.0"
thiserror = "1.0"