[package]
name = "idl_ls"
version = "0.1.0"
authors = ["Adriano Souza <adriano.souza113@gmail.com>"]
edition = "2018"

[[bin]]
name = "native_idl_server"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33"

log = "0.4"
env_logger = "0.7.1"

anyhow = "1"

codespan-lsp = "0.10"
codespan-reporting = "0.9"

dashmap = "3.11.10"
futures = "0.3.5"
sled = "0.34.3"
tokio = { version = "0.2", features = ["full"] }
tower-lsp = "0.13.1"
serde_json = "1.0.57"
idl = { path = "../../native_idl/idl" }
