[package]
name = "idl_internal"
version = "0.1.0"
authors = ["Adriano Souza"]
edition = "2018"
description = "Library used only by code being generated in idl."
license-file = "LICENSE"
keywords = ["development-tools"]
readme = "README.md"
homepage = "https://adrianos42.github.io/native_idl/"
documentation = "https://adrianos42.github.io/native_idl/"
repository = "https://github.com/adrianos42/native_idl"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"